app/infra/api-movimentacoes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-movimentacoes
    labels:
      app: api-movimentacoes
      tags.datadoghq.com/env: "prd"
      tags.datadoghq.com/service: "api-movimentacoes"
      tags.datadoghq.com/version: "1.0.0"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: api-movimentacoes
        tags.datadoghq.com/env: "prd"
        tags.datadoghq.com/service: "api-movimentacoes"
        tags.datadoghq.com/version: "1.0.0"
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/dotnet-lib.version: v3.14.2
        ad.datadoghq.com/app.logs: '[{"source":"csharp", "service":"api-movimentacoes", "tags":["api:api-movimentacoes"]}]'
    spec:
      containers:
      - name: api-movimentacoes
        image: victordomingues/esalq-tcc-api-movimentacoes:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: api-movimentacoes
